--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div id="pssw"><a href="#" class="forgot">Forgot password?</a></div>  
         <div class="login">
-            <a href="index1.html" class="edit">Login</a> 
+            <a href="index1.html" class="edit" onclick="alert('Congratulations your registration is conformed.')">Login</a>
             
         </div>
         <div class="sign">
